# typing_for_models

./: README.md  database.py  main.py  pyproject.toml
