[tool.poetry]
name = "typing-for-models"
version = "0.1.0"
description = ""
authors = ["Nikita Melnikov <nikitamelnikov119@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
asyncio = "^3.4.3"
alembic = "^1.13.3"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
